--- a/src/components/navigation-mobile.css
+++ b/src/components/navigation-mobile.css
@@ -129,7 +129,11 @@
     }
 
     .mobile-menu .menu-item.is-submenu-open > .sub-menu {
-        margin-top: 0.5rem;
+        margin-top: 0;
+    }
+
+    .mobile-menu .sub-menu > li:first-child {
+        padding-top: 0.5rem;
     }
 
     .mobile-menu .sub-menu li + li {
